--- a/misc/cronjobs/iPostPDF/pdf_bill.tmpl
+++ b/misc/cronjobs/iPostPDF/pdf_bill.tmpl
@@ -14,6 +14,7 @@
 				position: relative;
 			}
 			.footer {
+				clear: both;
 				margin-top: 40mm;
 			}
 			.recipient{
@@ -45,8 +46,8 @@
 				height: 0.5mm;
 			}
 			.summary {
-				position: absolute;
-				right: 0;
+				position: relative;
+				float:right;
 			}
 			ul.info {
 				padding:0;
