KD#1454 - Individual minimum password lengths for different policies
Adds two new system preferences (minAlnumPasswordLength and minComplexPasswordLength)
for setting minimum password lengths individually for different password policies.

NOTE!! This will also disable changing the username/password on memberentry-page,
because checking/suggesting passwords doesn't work there (Bug#278 in Redmine).
Passwords and usernames must be set/changed with "Change password".

--- a/koha-tmpl/intranet-tmpl/prog/en/modules/members/member-password.tt
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/members/member-password.tt
@@ -88,7 +88,8 @@
 	<input type="hidden" name="member" value="[% borrowernumber %]" /><input type="text" id="newuserid" name="newuserid" size="20" value="[% userid %]" /></li>
     <li><label for="newpassword">New password:</label>
     <div class="hint">Koha cannot display existing passwords. Leave the field blank to leave password unchanged.</div>
-	[% IF ( minPasswordLength ) %]<div class="hint">Minimum password length: [% minPasswordLength %]</div>[% END %]
+    <!-- For now this lies, so just disable it. FIXME / OUTI/PK ->>
+	<!-- [% IF ( minPasswordLength ) %]<div class="hint">Minimum password length: [% minPasswordLength %]</div>[% END %] -->
 	[% IF ( NOMATCH ) %]
 	<input name="newpassword"  id="newpassword" type="password" size="20" class="focus" />
 	<input name="newpassword" id="newpassword_random" readonly="readonly" disabled="disabled" type="hidden" />
