--- a/koha-tmpl/intranet-tmpl/prog/en/modules/circ/circulation.tt
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/circ/circulation.tt
@@ -55,6 +55,19 @@ $(document).ready(function() {
 });
 //]]>
 </script>
+<script type="text/javaScript">
+  <!-- KD#1457 Alt-P will print slip on checkout -->
+  function testKeyCode(e) {
+    var keycode;
+    if (window.event) keycode = window.event.keyCode;
+    else if (e) keycode = e.which;
+    var e = e || window.event;
+    if(keycode==80 && e.altKey){
+      window.open("/cgi-bin/koha/members/printslip.pl?borrowernumber=[% borrowernumber %]&amp;print=qslip", "printwindow");
+    }
+  }
+  document.onkeydown = testKeyCode;
+</script>
 </head>
 <body id="circ_circulation" class="circ">
 
