KD#1576 - Print transfer slips on branch transfers
By default Koha doesn't print transfer slips when confirming branch
transfers. Presumably we will want the transfer slips in Koha-Suomi
most of the time, so this is changed in returns.tt to print the slip by
default.

Since this is just a very minute template change, maybe we can
do without adding a new syspref for this.

--- a/koha-tmpl/intranet-tmpl/prog/en/modules/circ/returns.tt
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/circ/returns.tt
@@ -349,13 +349,14 @@ $(document).ready(function () {
 		[% ELSE %]
 		<h4><strong>Hold at</strong> [% destbranchname %]</h4>
         [% END %]
+        <!-- KD#1576 - Print transfer slip by default when doing branch transfers class=print to class=approve -->
         <form method="post" action="returns.pl" class="confirm">
             [% IF ( transfertodo ) %]
-                <input type="submit" class="approve" value="Confirm hold and transfer" />
-                <input type="submit" value="Print slip, transfer, and confirm" class="print" onclick="Dopop('hold-transfer-slip.pl?transfer=1&amp;borrowernumber=[% borrowernumber %]&amp;biblionumber=[% itembiblionumber %]&amp;reserve_id=[% reserved.reserve_id %]&amp;itemnumber=[% itemnumber %]&amp;op=slip'); this.form.submit();" />
+                <input type="submit" value="Confirm hold and transfer" />
+                <input type="submit" value="Print slip, transfer, and confirm" class="approve" onclick="Dopop('hold-transfer-slip.pl?transfer=1&amp;borrowernumber=[% borrowernumber %]&amp;biblionumber=[% itembiblionumber %]&amp;reserve_id=[% reserved.reserve_id %]&amp;itemnumber=[% itemnumber %]&amp;op=slip'); this.form.submit();" />
             [% ELSE %]
-                <input type="submit" class="approve" value="Confirm hold" />
-                <input type="submit" value="Print slip and confirm" class="print" onclick="Dopop('hold-transfer-slip.pl?borrowernumber=[% borrowernumber %]&amp;biblionumber=[% itembiblionumber %]&amp;itemnumber=[% itemnumber %]&amp;op=slip'); this.form.submit();" />
+                <input type="submit" value="Confirm hold" />
+                <input type="submit" value="Print slip and confirm" class="approve" onclick="Dopop('hold-transfer-slip.pl?borrowernumber=[% borrowernumber %]&amp;biblionumber=[% itembiblionumber %]&amp;itemnumber=[% itemnumber %]&amp;op=slip'); this.form.submit();" />
             [% END %]
                 <input type="submit" class="deny" value="Ignore" onclick="$('.dialog:visible').hide('slow'); $('#barcode').focus(); return false;" />
             [% FOREACH inputloo IN inputloop %]
