--- a/koha-tmpl/intranet-tmpl/prog/en/modules/catalogue/results.tt
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/catalogue/results.tt
@@ -537,6 +537,7 @@ var holdForPatron = function () {
                                     [% IF ( SEARCH_RESULT.items_count ) %]<strong>[% SEARCH_RESULT.items_count %]
                                     [% IF ( SEARCH_RESULT.itemsplural ) %]items[% ELSE %]item[% END %][% IF ( SEARCH_RESULT.availablecount ) %], [% SEARCH_RESULT.availablecount %] available[% ELSE %], None available[% END %]</strong>
 
+                                    [% IF ( showbranchlist ) %]
                                     [% IF ( SEARCH_RESULT.availablecount ) %]
                                     <ul>
                                     [% FOREACH available_items_loo IN SEARCH_RESULT.available_items_loop %]
@@ -560,8 +561,10 @@ var holdForPatron = function () {
                                     [% END %]
                                     </ul>
                                     [% END %]
+                                    [% END %]
                                    [% IF ( SEARCH_RESULT.onloancount ) %]
                                    <span class="status">[% SEARCH_RESULT.onloancount %] on loan</span>
+                                    [% IF ( showbranchlist ) %]
                                     <ul>
                                     [% FOREACH onloan_items_loo IN SEARCH_RESULT.onloan_items_loop %]
                                     <li>[% IF ( onloan_items_loo.branchname ) %][% onloan_items_loo.branchname %][% END %]</li>
@@ -584,9 +587,10 @@ var holdForPatron = function () {
                                     [% END %]
                                     </ul>
                                     [% END %]
-
+                                    [% END %]
                                     [% IF ( SEARCH_RESULT.othercount ) %]
                                     <span class="unavailable">[% SEARCH_RESULT.othercount %] unavailable</span>
+                                    [% IF ( showbranchlist ) %]
                                     <ul>
                                     [% FOREACH other_items_loo IN SEARCH_RESULT.other_items_loop %]
                                     <li>[% IF ( other_items_loo.branchname ) %][% other_items_loo.branchname %][% END %]</li>
@@ -614,6 +618,7 @@ var holdForPatron = function () {
                                     -->
                                     [% END %]
                                     </ul>
+                                    [% END %]
                                     [% END %]
                                     [% ELSE %]
                                     [% IF ( SEARCH_RESULT.ALTERNATEHOLDINGS.count ) %]
